--- a/Zeitgeist.Web/packages.config
+++ b/Zeitgeist.Web/packages.config
@@ -3,13 +3,15 @@
   <package id="angularjs" version="1.3.15" targetFramework="net451" />
   <package id="angular-moment" version="0.9.2" targetFramework="net451" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net451" />
+  <package id="bootstrap" version="3.1.1" targetFramework="net451" />
   <package id="ChameleonForms" version="1.0.0.42" targetFramework="net451" />
   <package id="ChameleonForms.TwitterBootstrap3" version="1.0.0.1" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="Humanizer" version="1.0" targetFramework="net451" />
   <package id="ImageResizer" version="3.4.3" targetFramework="net451" />
-  <package id="jQuery" version="1.9.0" targetFramework="net451" />
+  <package id="jQuery" version="1.9.1" targetFramework="net451" />
+  <package id="jquery.validate.bootstrap" version="1.0.0.002" targetFramework="net451" />
+  <package id="jQuery.Validation" version="1.10.0" targetFramework="net451" />
   <package id="knockoutjs" version="3.3.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net451" />
@@ -23,6 +25,8 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.30506.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.30506.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net451" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.1.1" targetFramework="net451" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.1" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net451" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net451" />
