--- a/Zeitgeist.Web/packages.config
+++ b/Zeitgeist.Web/packages.config
@@ -11,6 +11,7 @@
   <package id="ImageResizer" version="3.4.3" targetFramework="net451" />
   <package id="jQuery" version="1.9.1" targetFramework="net451" />
   <package id="jquery.validate.bootstrap" version="1.0.0.002" targetFramework="net451" />
+  <package id="jquery.validate.unobtrusive.bootstrap" version="1.2.3" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net451" />
   <package id="knockoutjs" version="3.3.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net451" />
